--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
     }
   ],
   "require": {
-    "symfony/yaml": "^7.1"
+    "symfony/yaml": "^7.1",
+    "symfony/http-foundation": "^7.1",
+    "monolog/monolog": "^3.7",
+    "nesbot/carbon": "^3.8",
+    "symfony/validator": "^7.1"
   }
 }
