--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
     "nesbot/carbon": "^3.8",
     "symfony/validator": "^7.1",
     "symfony/var-dumper": "^7.1",
-    "psr/container": "^2.0"
+    "psr/container": "^2.0",
+    "illuminate/database": "^11.28"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.4"
   }
 }
