--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,14 @@
     "symfony/validator": "^7.1",
     "symfony/var-dumper": "^7.1",
     "psr/container": "^2.0",
-    "illuminate/database": "^11.28"
+    "illuminate/database": "^11.28",
+    "symfony/console": "^7.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
+  },
+  "scripts": {
+    "test": "phpunit --colors=always",
+    "test-coverage": "phpunit --coverage-html coverage"
   }
 }
