--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "symfony/var-dumper": "^7.1",
     "psr/container": "^2.0",
     "illuminate/database": "^11.28",
-    "symfony/console": "^7.1"
+    "symfony/console": "^7.1",
+    "laravel/serializable-closure": "^1.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
