--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,14 @@
     }
   ],
   "require": {
-    "symfony/yaml": "^7.1",
-    "symfony/http-foundation": "^7.1",
+    "illuminate/database": "^11.28",
+    "illuminate/http": "^11.28",
+    "laravel/serializable-closure": "^1.3",
     "monolog/monolog": "^3.7",
     "nesbot/carbon": "^3.8",
-    "symfony/validator": "^7.1",
-    "symfony/var-dumper": "^7.1",
-    "psr/container": "^2.0",
-    "illuminate/database": "^11.28",
     "symfony/console": "^7.1",
-    "laravel/serializable-closure": "^1.3"
+    "symfony/var-dumper": "^7.1",
+    "symfony/yaml": "^7.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
