--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
     "nesbot/carbon": "^3.8",
     "symfony/console": "^7.1",
     "symfony/var-dumper": "^7.1",
-    "symfony/yaml": "^7.1"
+    "symfony/yaml": "^7.1",
+    "illuminate/validation": "^11.28",
+    "illuminate/translation": "^11.28"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
