--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "symfony/var-dumper": "^7.1",
     "symfony/yaml": "^7.1",
     "illuminate/validation": "^11.28",
-    "illuminate/translation": "^11.28"
+    "illuminate/translation": "^11.28",
+    "vlucas/phpdotenv": "^5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
