--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "symfony/yaml": "^7.1",
     "illuminate/validation": "^11.28",
     "illuminate/translation": "^11.28",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "imagekit/imagekit": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
