--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "illuminate/validation": "^11.28",
     "illuminate/translation": "^11.28",
     "vlucas/phpdotenv": "^5.6",
-    "imagekit/imagekit": "^4.0"
+    "imagekit/imagekit": "^4.0",
+    "pgrimaud/instagram-user-feed": "^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.4"
