--- a/src/Modules/Scrape/scrape.routes.yaml
+++ b/src/Modules/Scrape/scrape.routes.yaml
@@ -6,3 +6,6 @@ routes:
   - path: /scrape/ig/profile
     handler: Modules\Scrape\Http\ScrapeHandler::igProfile
     methods: [GET]
+  - path: /scrape/ig/feed
+    handler: Modules\Scrape\Http\ScrapeHandler::igFeed
+    methods: [GET]
