--- a/src/Modules/Test/test.routes.yaml
+++ b/src/Modules/Test/test.routes.yaml
@@ -3,3 +3,6 @@ routes:
   - path: /
     handler: Modules\Test\Http\TestHandler::test
     methods: [GET]
+  - path: /error
+    handler: Modules\Test\Http\TestHandler::error
+    methods: [GET]
