--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "functions": {
     "api/index.php": {
       "runtime": "vercel-php@0.7.3",
-      "maxDuration": 300
+      "memory": 3008,
+      "maxDuration": 60
     }
   },
   "routes": [{ "src": "/(.*)", "dest": "/api/index.php" }],
