--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "pgrimaud/instagram-user-feed": "^7.0"
   },
   "require-dev": {
+    "doctrine/migrations": "^3.8",
     "vlucas/phpdotenv": "^5.6",
     "symfony/var-dumper": "^7.1",
     "monolog/monolog": "^3.7",
@@ -36,7 +37,12 @@
     "phpunit/phpunit": "^11.4"
   },
   "scripts": {
+    "start": "php -S 127.0.0.1:8000 -t api",
     "test": "phpunit --colors=always",
-    "test-coverage": "phpunit --coverage-html coverage"
+    "test-coverage": "phpunit --coverage-html coverage",
+    "migrate-run": "php vendor/bin/doctrine-migrations migrations:migrate",
+    "migrate-create": "php vendor/bin/doctrine-migrations migrations:migrate",
+    "migrate-status": "php vendor/bin/doctrine-migrations migrations:migrate",
+    "migrate-list": "php vendor/bin/doctrine-migrations migrations:migrate"
   }
 }
