--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,12 @@
     "start": "php -S 127.0.0.1:8000 -t api",
     "test": "phpunit --colors=always",
     "test-coverage": "phpunit --coverage-html coverage",
-    "migrate-run": "php vendor/bin/doctrine-migrations migrations:migrate",
-    "migrate-create": "php vendor/bin/doctrine-migrations migrations:migrate",
-    "migrate-status": "php vendor/bin/doctrine-migrations migrations:migrate",
-    "migrate-list": "php vendor/bin/doctrine-migrations migrations:migrate"
+    "migrate-run": "php vendor/bin/doctrine-migrations migrations:migrate --configuration=config/migrations.php --db-configuration=config/migrations-db.php",
+    "migrate-create": "php vendor/bin/doctrine-migrations migrations:generate --configuration=config/migrations.php --db-configuration=config/migrations-db.php",
+    "migrate-status": "php vendor/bin/doctrine-migrations migrations:status --configuration=config/migrations.php --db-configuration=config/migrations-db.php",
+    "migrate-list": "php vendor/bin/doctrine-migrations migrations:list --configuration=config/migrations.php --db-configuration=config/migrations-db.php"
+  },
+  "config": {
+    "process-timeout": 0
   }
 }
