--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "psr-4": {
       "App\\": "app/",
       "Models\\": "src/Models/",
-      "Modules\\": "src/Modules/"
+      "Modules\\": "src/Modules/",
+      "Repository\\": "src/Repository/"
     },
     "files": [
       "app/helpers.php"
@@ -26,7 +27,8 @@
     "illuminate/validation": "^11.28",
     "illuminate/translation": "^11.28",
     "imagekit/imagekit": "^4.0",
-    "pgrimaud/instagram-user-feed": "^7.0"
+    "pgrimaud/instagram-user-feed": "^7.0",
+    "paragonie/paseto": "^3.2"
   },
   "require-dev": {
     "doctrine/migrations": "^3.8",
@@ -34,7 +36,8 @@
     "symfony/var-dumper": "^7.1",
     "monolog/monolog": "^3.7",
     "symfony/console": "^7.1",
-    "phpunit/phpunit": "^11.4"
+    "phpunit/phpunit": "^11.4",
+    "filp/whoops": "^2.16"
   },
   "scripts": {
     "start": "php -S 127.0.0.1:8000 -t api",
