--- a/routes.yaml
+++ b/routes.yaml
@@ -1,5 +1,4 @@
 imports:
   - { resource: src/Modules/User/user.routes.yaml }
-  - { resource: src/Modules/Test/test.routes.yaml }
   - { resource: src/Modules/Scrape/scrape.routes.yaml }
-  - { resource: src/Modules/Dummy/dummy.routes.yaml }
+  - { resource: src/Modules/Auth/auth.routes.yaml }
