improve response_error

--- a/src/Modules/Auth/auth.routes.yaml
+++ b/src/Modules/Auth/auth.routes.yaml
@@ -4,3 +4,6 @@ routes:
   - path: /register
     handler: Modules\Auth\Http\AuthHandler::register
     methods: [POST]
+  - path: /token
+    handler: Modules\Auth\Http\AuthHandler::token
+    methods: [POST]
