--- a/routes.yaml
+++ b/routes.yaml
@@ -2,3 +2,4 @@ imports:
   - { resource: src/Modules/User/user.routes.yaml }
   - { resource: src/Modules/Scrape/scrape.routes.yaml }
   - { resource: src/Modules/Auth/auth.routes.yaml }
+  - { resource: src/Modules/Home/home.routes.yaml }
