--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,16 @@
     "illuminate/http": "^11.28",
     "laravel/serializable-closure": "^1.3",
     "nesbot/carbon": "^3.8",
-    "symfony/yaml": "^7.1",
     "illuminate/validation": "^11.28",
     "illuminate/translation": "^11.28",
     "imagekit/imagekit": "^4.0",
     "pgrimaud/instagram-user-feed": "^7.0",
-    "paragonie/paseto": "^3.2"
+    "paragonie/paseto": "^3.2",
+    "symfony/yaml": "^7.1"
   },
   "require-dev": {
-    "doctrine/migrations": "^3.8",
     "vlucas/phpdotenv": "^5.6",
+    "doctrine/migrations": "^3.8",
     "symfony/var-dumper": "^7.1",
     "monolog/monolog": "^3.7",
     "symfony/console": "^7.1",
